testsuite/tests/partial-sigs/should_fail/InstantiatedNamedWildcardsInConstraints.stderr

InstantiatedNamedWildcardsInConstraints.hs:4:18: error:
    Found constraint wildcard ‘_’ standing for ‘Show b’
    To use the inferred type, enable PartialTypeSignatures
    In the type signature:
      foo :: (Enum _a, _) => _a -> (String, b)
